Updated battle and canvas class to fix the missing item sprites and ability/item detail headers.
Also tweaked styles in addition to other code as they were *also* being hidden off-screen.  >_>

--- a/styles/style.css
+++ b/styles/style.css
@@ -1213,6 +1213,7 @@ body.index #header {
 
 #mmrpg .canvas_ability_details,
 #mmrpg .canvas_item_details {
+    position: absolute;
     text-indent: 0;
     left: 250px;
     right: 250px;
